fixed height of pages so they stretch to the entiry screen.

--- a/src/app/comments/comments.component.css
+++ b/src/app/comments/comments.component.css
@@ -1,8 +1,6 @@
 .comments-container {
-  height: 100%;
   width: 100%;
-  /* padding-top: 50px; */
-  /* overflow: auto; */
+  overflow: auto;
 }
 
 .right-container {
