--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -1,6 +1,4 @@
 .timeline-container {
-  height: 100%;
-  width: 100%;
   padding: 50px 20px 0 35px;
   overflow: auto;
   font-family: "Effra", Helvetica, sans-serif;
