--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
 ::selection {
   color: red;
   background: yellow;
